k8s/network-policies/allow-frontend-to-dbs.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-dbs
  namespace: egi-inventario
spec:
  podSelector:
    matchLabels:
      app: inventario-web
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: inventario-db
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 1433
        - protocol: TCP
          port: 389
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
