k8s/network-policies/allow-frontend-to-ldap.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-ldap
  namespace: egi-inventario
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ldap
      ports:
        - protocol: TCP
          port: 389
