k8s/network-policies/allow-ldap-from-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ldap-from-frontend
  namespace: egi-inventario
spec:
  podSelector:
    matchLabels:
      app: ldap
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 389
