k8s/network-policies/allow-mongodb-from-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongodb-from-frontend
  namespace: egi-inventario
spec:
  podSelector:
    matchLabels:
      app: inventario-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventario-web
      ports:
        - protocol: TCP
          port: 27017
