k8s/network-policies/allow-sqlserver-from-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sqlserver-from-frontend
  namespace: egi-inventario
spec:
  podSelector:
    matchLabels:
      app: sqlserver
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 1433
